--- a/Practice 4/Practice_4/src/main/resources/static/index.html
+++ b/Practice 4/Practice_4/src/main/resources/static/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>WebSocket</title>
-    <script src="sockjs.js"></script>
-    <script src="stomp.min.js"></script>
+    <script src="../../../../../../Ресурсы/sockjs.js"></script>
+    <script src="../../../../../../Ресурсы/stomp.min.js"></script>
     <script type="text/javascript">
         let stompClient = null;
 
